Bug 40304 - [4.5 Regression] Revision 147995 breaks stack unwind
Summary: [4.5 Regression] Revision 147995 breaks stack unwind
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks: 40316
  Show dependency treegraph
 
Reported: 2009-05-30 13:19 UTC by H.J. Lu
Modified: 2009-05-31 13:54 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-05-30 13:19:26 UTC
On Linux/ia32, revision 147995:

http://gcc.gnu.org/ml/gcc-cvs/2009-05/msg00974.html

caused

FAIL: g++.dg/eh/async-unwind1.C execution test
FAIL: g++.dg/torture/stackalign/eh-alloca-1.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/eh-alloca-1.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/eh-alloca-1.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/eh-alloca-1.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/eh-alloca-1.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/eh-alloca-1.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/eh-alloca-1.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/eh-alloca-1.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-1.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-1.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-1.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-1.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-1.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-1.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-1.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-1.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-2.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-2.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-2.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-2.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-2.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-2.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-2.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/eh-vararg-2.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/unwind-0.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/unwind-0.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/unwind-0.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/unwind-0.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/unwind-1.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/unwind-1.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/unwind-1.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/unwind-1.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/unwind-2.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/unwind-2.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/unwind-2.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/unwind-2.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/unwind-3.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/unwind-3.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/unwind-3.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/unwind-3.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/unwind-5.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/unwind-5.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/unwind-5.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/unwind-5.C  -O3 -g  execution test
FAIL: g++.dg/torture/stackalign/unwind-6.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/unwind-6.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/unwind-6.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/unwind-6.C  -O3 -g  execution test
FAIL: gcc.target/i386/lea.c scan-assembler leal
Comment 1 Jakub Jelinek 2009-05-30 19:00:56 UTC
See http://gcc.gnu.org/ml/gcc-patches/2009-05/msg01942.html
Comment 2 Jakub Jelinek 2009-05-31 09:36:33 UTC
Subject: Bug 40304

Author: jakub
Date: Sun May 31 09:36:17 2009
New Revision: 148011

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=148011
Log:
	PR middle-end/40304
	* config/i386/i386.c (pro_epilogue_adjust_stack): Mark insns
	frame related even if !set_cfa && style < 0.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/i386.c

Comment 3 H.J. Lu 2009-05-31 13:54:52 UTC
I opened PR 40316 for

gcc.target/i386/lea.c

I am closing this one.